[gd_scene load_steps=6 format=2]

[ext_resource path="res://tool/SessionViewer/GetFile.gd" type="Script" id=1]
[ext_resource path="res://tool/SessionViewer/GetNumberOfListingEntries.gd" type="Script" id=2]
[ext_resource path="res://tool/SessionViewer/Listing.gd" type="Script" id=3]
[ext_resource path="res://tool/SessionViewer/GetListing.gd" type="Script" id=4]
[ext_resource path="res://gui/theme.tres" type="Theme" id=5]

[node name="Listing" type="PanelContainer"]
margin_right = 168.0
margin_bottom = 1068.0
theme = ExtResource( 5 )
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 12.0
margin_top = 12.0
margin_right = 194.0
margin_bottom = 1056.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 166.0
margin_bottom = 1028.0

[node name="ListingLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 25.0
rect_min_size = Vector2( 150, 0 )
text = "Listing"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 150.0
margin_bottom = 939.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="ListingContent" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 150.0
margin_bottom = 898.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 955.0
margin_right = 150.0
margin_bottom = 1012.0

[node name="PreviousListing" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 44.0
margin_bottom = 57.0
focus_mode = 0
disabled = true
text = "<"

[node name="PaginationLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 60.0
margin_top = 16.0
margin_right = 90.0
margin_bottom = 41.0
size_flags_horizontal = 3
align = 1

[node name="NextListing" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 106.0
margin_right = 150.0
margin_bottom = 57.0
focus_mode = 0
disabled = true
text = ">"

[node name="GetListing" type="HTTPRequest" parent="."]
script = ExtResource( 4 )

[node name="GetNumberOfListingEntries" type="HTTPRequest" parent="."]
script = ExtResource( 2 )

[node name="GetFile" type="HTTPRequest" parent="."]
script = ExtResource( 1 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PreviousListing" to="." method="_on_PreviousListing_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/NextListing" to="." method="_on_NextListing_pressed"]
[connection signal="request_completed" from="GetListing" to="." method="_on_GetListing_request_completed"]
[connection signal="request_completed" from="GetNumberOfListingEntries" to="." method="_on_GetNumberOfListingEntries_request_completed"]
[connection signal="request_completed" from="GetFile" to="." method="_on_GetFile_request_completed"]
